# Intro-to-rust

add/: Cargo.toml
add/add_one/: Cargo.toml
add/add_one/src/: lib.rs
add/adder/: Cargo.toml
add/adder/src/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
branches/: Cargo.toml
closure/: Cargo.toml
closure/src/: main.rs
debugs/: Cargo.toml
debugs/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
find_largest_no/: Cargo.toml
find_largest_no/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
generic_1/: Cargo.toml
generic_1/src/: main.rs
generic_2/: Cargo.toml
generic_2/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hashmaps/: Cargo.toml
hashmaps/src/: main.rs
hello_world1/: Cargo.toml
iterator/: Cargo.toml
iterator/src/: main.rs
iterator_1/: Cargo.toml
loops/: Cargo.toml
loops/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
patterns_match/: Cargo.toml
patterns_match/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
recursion/: Cargo.toml
recursion/src/: main.rs
slices/: Cargo.toml
slices/src/: main.rs
string/: Cargo.toml
string/src/: main.rs
sudoku/: Cargo.toml
sudoku/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
vectors/: Cargo.toml
vectors/src/: main.rs
